# -coderavecia

./: README.md
PROJET_VSCODE/: .gitignore  INSTRUCTIONS_ATELIER.md  README.md  docker-compose.yml  start.bat  start.ps1
PROJET_VSCODE/back-fastapi/: Dockerfile  README.md  init_db.py  pyproject.toml  requirements.txt
PROJET_VSCODE/back-fastapi/app/: __init__.py  main.py
PROJET_VSCODE/back-fastapi/app/models/: count_table.py
PROJET_VSCODE/projet_vscode/vite-project/: package-lock.json
PROJET_VSCODE/projet_vscode/vite-project/src/: App.tsx
PROJET_VSCODE/vite-project/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
PROJET_VSCODE/vite-project/src/: App.tsx  index.css
projet_vscode/: README.md  docker-compose.yml
projet_vscode/back-fastapi/: .gitignore  Dockerfile  README.md  pyproject.toml
projet_vscode/back-fastapi/app/: main.py
projet_vscode/back-fastapi/app/models/: count_table.py
projet_vscode/vite-project/: package-lock.json  package.json
projet_vscode/vite-project/src/: App.tsx
